--- a/meson.build
+++ b/meson.build
@@ -4,10 +4,12 @@ project(
     version: '1.0.0'
 )
 
-# 
+#
 i18n = import('i18n')
+vapi_dir = meson.current_source_dir() / 'vapi'
 
 add_global_arguments('-DGETTEXT_PACKAGE="@0@"'.format(meson.project_name()), language: 'c')
+add_project_arguments(['--vapidir', vapi_dir], language: 'vala')
 
 #
 subdir('po')
@@ -26,7 +28,10 @@ executable(
         dependency('gdk-pixbuf-2.0'),
         dependency('json-glib-1.0'),
         dependency('granite'),
-    ],    
+        meson.get_compiler('vala').find_library('posix'),
+        meson.get_compiler('vala').find_library('libcurl', dirs: vapi_dir),
+        meson.get_compiler('c').find_library('libcurl', dirs: vapi_dir),
+    ],
     install: true
 )
 
