--- a/src/Utils/Constants.vala.in
+++ b/src/Utils/Constants.vala.in
@@ -1,7 +1,9 @@
 namespace Utils.Constants {
     const string APP_NAME = "Whaler";
-    const string APP_ID = "com.github.sdv43.whaler";
+    const string APP_ID = @APP_ID@;
+    const string APP_VERSION = @APP_VERSION@;
     const string RESOURCE_BASE = "/com/github/sdv43/whaler";
+    const string LOCALE_DIR = @LOCALE_DIR@;
     const string DOCKER_ENGINE_SOCKET_PATH = "/run/docker.sock";
     const string DOCKER_ENIGINE_API_VERSION = "1.41";
 }
