--- a/data/com.github.sdv43.whaler.appdata.xml.in
+++ b/data/com.github.sdv43.whaler.appdata.xml.in
@@ -18,6 +18,17 @@
     </p>
   </description>
   <releases>
+    <release version="1.0.1" date="2022-04-22">
+      <description>
+        <ul>
+          <li>Code refactoring</li>
+          <li>Add homepage and bugtracker links</li>
+          <li>Set elementary theme as default</li>
+          <li>Fix incorrect window positon at startup</li>
+          <li>Fix wrong language choice</li>
+        </ul>
+      </description>
+    </release>
     <release version="1.0.0" date="2022-04-13"/>
   </releases>
   <screenshots>
