add container restart action

--- a/uncrustify.cfg
+++ b/uncrustify.cfg
@@ -619,7 +619,7 @@ sp_finally_brace                = ignore   # ignore/add/remove/force
 sp_brace_finally                = ignore   # ignore/add/remove/force
 
 # Add or remove space between 'try' and '{' if on the same line.
-sp_try_brace                    = ignore   # ignore/add/remove/force
+sp_try_brace                    = add   # ignore/add/remove/force
 
 # Add or remove space between get/set and '{' if on the same line.
 sp_getset_brace                 = ignore   # ignore/add/remove/force
