add container status labels

--- a/src/meson.build
+++ b/src/meson.build
@@ -47,6 +47,7 @@ sources = files(
 
     'Widgets/Utils/ConfirmationDialog.vala',
     'Widgets/Utils/ContainerInfoDialog.vala',
+    'Widgets/Utils/DockerContainerStatusLabel.vala',
 
     'Docker/ApiClient.vala',
     'Docker/ContainerLogWatcher.vala',
