--- a/data/com.github.sdv43.whaler.appdata.xml.in
+++ b/data/com.github.sdv43.whaler.appdata.xml.in
@@ -18,6 +18,13 @@
     </p>
   </description>
   <releases>
+    <release version="1.2.1" date="2022-04-05">
+      <description>
+        <ul>
+          <li>Update flatpak runtime version</li>
+        </ul>
+      </description>
+    </release>
     <release version="1.2.0" date="2022-07-07">
       <description>
         <ul>
